--- a/professor1.html
+++ b/professor1.html
@@ -22,6 +22,7 @@
 <body>
 	<h1>John Smith</h1>
 	<div class="email">
+		<p>John Smith</p>
 		<p>Title: Associate Professor</p>
 		<p>Department: Mathematics</p>
 		<p>Email: john.smith@university.edu</p>
