--- a/professor2.html
+++ b/professor2.html
@@ -22,6 +22,7 @@
 <body>
 	<h1>Mary Johnson</h1>
 	<div class="email">
+		<p>Mary Johnson</p>
 		<p>Title: Assistant Professor</p>
 		<p>Department: History</p>
 		<p>Email: mary.johnson@university.edu</p>
