--- a/professor3.html
+++ b/professor3.html
@@ -22,6 +22,7 @@
 <body>
 	<h1>David Lee</h1>
 	<div class="email">
+		<p>David Lee</p>
 		<p>Title: Professor</p>
 		<p>Department: Physics</p>
 		<p>Email: david.lee@university.edu</p>
